# teste-14

./: .gitignore  README.md  app.py  exemplo.env  pipeline.py  pyproject.toml  requirements.txt
sql/: analise_de_categoria.sql  analise_de_vendas.sql  create_table.sql  insert_into_vendas.sql  insert_into_vendas_calculado.sql
